kubernetes/overlays/homelab/otterwiki/generated/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: otterwiki
  namespace: otterwiki

spec:
  parentRefs:
    - name: traefik
      namespace: traefik
      sectionName: websecure
  hostnames:
    - otterwiki.knlim.dev
    - wiki.knlim.dev
  rules:
    - backendRefs:
        - name: otterwiki
          port: 80
